<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">


<LinearLayout

        app:layout_constraintHeight_percent="1"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="0dp"
         app:layout_constraintWidth_percent="0.45"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/width"
                android:textColor="#FF0000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tb_width"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/widthhint"
                android:inputType="textPersonName|numberDecimal" />

            <TextView
                android:id="@+id/text_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/length"
                android:textColor="#FF0000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tb_length"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lengthhint"
                android:inputType="textPersonName|numberDecimal" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/height"
                android:textColor="#FF0000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tb_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/heighthint"
                android:inputType="textPersonName|numberDecimal" />

            <TextView
                android:id="@+id/text_angle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/angle"
                android:textColor="#FF0000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tb_angle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/angleHint"
                android:inputType="textPersonName|numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lat"
                android:textColor="#FF0000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tb_lat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lathint"
                android:inputType="textPersonName|numberDecimal" />

            <TextView
                android:id="@+id/text_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lon"
                android:textColor="#FF0000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tb_lon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lonhint"
                android:inputType="textPersonName|numberDecimal" />
        </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatButton
        android:id="@+id/b_curr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getCurr"
        android:text="@string/curr"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="generate"
            android:text="@string/generate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="remove"
        android:text="@string/remove" />
    </LinearLayout>

    </LinearLayout>

    <org.osmdroid.views.MapView
        android:id="@+id/input_mapView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

</android.support.constraint.ConstraintLayout>
